--- a/src/app/pages/components/favorites/favorites.component.scss
+++ b/src/app/pages/components/favorites/favorites.component.scss
@@ -3,37 +3,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 100vh; // Sayfa yüksekliğine uyumlu
+
 
   .content {
     text-align: center;
     margin-left: 10px;
     width: 100%;
     margin: auto;
+    height:auto;
     app-loading {
-      // app-loading bileşeni için özel stil ekleyebilirsiniz
+
       display: flex;
       flex-direction: column;
       align-items: center;
 
       img {
-        width: 100px; // Örnek bir resim genişliği
-        height: 100px; // Örnek bir resim yüksekliği
+        width: 100px;
+        height: 100px;
       }
     }
 
     app-content-table {
-      // app-content-table bileşeni için özel stil ekleyebilirsiniz
-      width: 100%; // Tam genişlik
-      padding: 20px; // Kenar boşlukları
+
+      width: 100%;
+      padding: 20px;
 
 
     }
 
     app-default-content {
-      // app-default-content bileşeni için özel stil ekleyebilirsiniz
-      font-size: 18px; // Örnek bir font boyutu
-      color: #333; // Örnek bir metin rengi
+
+      font-size: 18px;
+      color: #333;
     }
   }
 }
