--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -6,53 +6,10 @@
   </div>
   <hr>
   <div>
-    <div class="align-items-center"
-      *ngFor="let product of products"
-    >
-        <div class="shadow-1 p-4 flex flex-row align-items-center cursor-pointer " >
-            <div class="image flex mx-1" [routerLink]="['/pages/product', product.productId]">
-              <img
-                [src]="getFileUrl(product?.file)"
-                [alt]="product?.name"
-                width="150"
-                height="150"
-              />
-            </div>
-            <div class="name flex align-items-center mx-4">
-              <span>{{
-                product?.name | truncate : 15
-              }}</span>
-            </div>
-            <div class="category flex align-items-center mx-4">
-              <span>{{
-                product?.category | categoryStatus
-              }}</span>
-            </div>
-          <div class="description flex align-items-center mx-4">
-            <p >
-              {{ product?.description | truncate : 300 }}
-            </p>
-          </div>
-
-          <div class="price flex align-items-center mx-4">
-            <span
-              >{{ product?.priceStacked | currency:'USD' }}</span
-            >
-            <i
-              class="pi text-2xl cursor-pointer ml-3"
-              [ngClass]="{
-                'pi-heart text-600': !liked,
-                'pi-heart-fill text-red-500': liked
-              }"
-              (click)="deleteFavorites(product.productId)"
-            ></i>
-          </div>
-        </div>
+    <div class="align-items-center" *ngFor="let product of products">
+      <app-favorites-card [product]="product" [liked]="true" (onDelete)="deleteFavorites(product.productId, product)" ></app-favorites-card>
     </div>
   </div>
-
-
-
 </div>
 
 
