--- a/src/app/dashboard/components/product-management/get-product/get-product.component.scss
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.scss
@@ -61,8 +61,8 @@ $background-color: #ecf0f1;
   }
 
   img {
-    max-width: 100px;
-    max-height: 100px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
   }
 
@@ -92,7 +92,10 @@ $background-color: #ecf0f1;
 
   td,th{
     width: auto;
+    height: 150px;
     justify-content: center;
+    text-align: center;
+    align-items: center;
   }
 
   .button{
