--- a/src/app/pages/components/navbar-list/navbar-list.component.scss
+++ b/src/app/pages/components/navbar-list/navbar-list.component.scss
@@ -1,200 +1,672 @@
-ul {
-  display: block;
-  list-style-type: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 0px;
-}
-.navbar {
-  justify-content: start;
-  align-items: center;
-  text-align: start;
-  background-color: transparent;
-  cursor: pointer;
-  color: #fff;
-  width: 100%;
-  padding-top: 20px;
-  padding-bottom: 10px;
-}
-
-
-
-.dropdown-container {
-  position: relative;
-  align-items: center;
-  display: flex;
-  justify-content: flex-start;
-
-  .button {
-    background-color: transparent;
-    color: #333;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-
-    .item-icon {
-      margin-right: 8px;
-    }
-
-    .item-txt {
-      font-size: 1.2rem;
-    }
-
-    i.pi {
-      font-size: 1rem;
-    }
-
-    i.pi-chevron-down,
-    i.pi-chevron-up {
-      font-size: 1rem;
-      color: #333333cb;
-    }
+@media screen and (min-width: 1024px) {
+  ul {
+    display: block;
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
   }
-
-  .dropdown-content {
-    position: absolute;
-    background-color: #f9f9f9;
-    padding: 5px;
-    top: 100%;
-    right: -30px;
-    width: 180px;
-    border-radius: 8px;
-    z-index: 2;
-
-    ul.dropdown-menu {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-
-      .menu-item {
-        padding: 5px;
-        display: flex;
-        font-size: 1.2rem;
-
-        a {
-          display: flex;
-          align-items: center;
-          color: #333;
-          text-decoration: none;
-
-          i.pi {
-            display: flex;
-            margin-right: 15px;
-            font-size: 1rem;
-          }
-        }
-
-        &:hover {
-          background-color: #ddd;
-        }
-      }
-    }
-  }
-}
-
-
-
-
-.navbar a {
-  color: #fff;
-}
-
-.navbar{
-
-  .title{
-    letter-spacing: 0;
-    font-weight: bold;
-    font-size: 2rem;
-  }
-  .custom-select {
-    color: #000;
-    border: none;
-    background: transparent;
-    font-size: 1.2rem;
-  }
-  .right-menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
-    i{
-      color: #333;
-      font-size: 1.2rem;
-    }
-
-    li{
-      margin-right: 15px;
-    }
-  }
-}
-
-.search{
-  margin-bottom: 1rem;
-  width: 100%;
-
-
-  .pi-search{
-    color: #555;
-    font-size: 1rem;
-  }
-}
-
-:host ::ng-deep {
-
-  .search {
-    .p-inputtext{
-      width: 500px;
-      height: 35px;
-      background-color: #d5d6d8ef;
-      border: 1px solid #d5d6d8;
-      @media screen and (max-width: 768px) {
-       max-width:300px;
-      }
-    }
-  }
-  .pi-shopping-bag .p-badge {
-    background-color: #3498db;
-    font-size: 0.7rem;
-  }
-
-  .pi-shopping-bag .p-badge {
-    background-color: green;
-    font-size: 0.7rem;
-  }
-
-  .pi-heart .p-badge {
-    background-color: red;
-    font-size: 0.7rem;
-  }
-}
-
-@media screen and (max-width: 768px) {
   .navbar {
-    flex-direction: column;
+    justify-content: start;
     align-items: center;
-
-    img{
-      display: none;
-    }
-  }
-
-  .navbar .right-menu {
-    margin-top: 10px;
-    justify-content: flex-start;
+    text-align: start;
+    background-color: transparent;
+    cursor: pointer;
+    color: #fff;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 10px;
   }
 
   .dropdown-container {
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+
     .button {
-      padding: 5px;
+      background-color: transparent;
+      color: #333;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+
+      .item-icon {
+        margin-right: 8px;
+      }
+
+      .item-txt {
+        font-size: 1.2rem;
+      }
+
+      i.pi {
+        font-size: 1rem;
+      }
+
+      i.pi-chevron-down,
+      i.pi-chevron-up {
+        font-size: 1rem;
+        color: #333333cb;
+      }
     }
 
     .dropdown-content {
-      top: 50%;
-      right: 0;
-      width: 100%;
-      transform: translateY(-50%);
+      position: absolute;
+      background-color: #f9f9f9;
+      padding: 5px;
+      top: 100%;
+      right: -30px;
+      width: 180px;
+      border-radius: 8px;
+      z-index: 2;
+
+      ul.dropdown-menu {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        .menu-item {
+          padding: 5px;
+          display: flex;
+          font-size: 1.2rem;
+
+          a {
+            display: flex;
+            align-items: center;
+            color: #333;
+            text-decoration: none;
+
+            i.pi {
+              display: flex;
+              margin-right: 15px;
+              font-size: 1rem;
+            }
+          }
+
+          &:hover {
+            background-color: #ddd;
+          }
+        }
+      }
+    }
+  }
+
+  .navbar a {
+    color: #fff;
+  }
+
+  .navbar {
+    .title {
+      letter-spacing: 0;
+      font-weight: bold;
+      font-size: 2rem;
+    }
+    .custom-select {
+      color: #000;
+      border: none;
+      background: transparent;
+      font-size: 1.2rem;
+    }
+    .right-menu {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+
+      i {
+        color: #333;
+        font-size: 1.2rem;
+      }
+
+      li {
+        margin-right: 15px;
+      }
+    }
+  }
+
+  .search {
+    margin-bottom: 1rem;
+    width: 100%;
+
+    .pi-search {
+      color: #555;
+      font-size: 1rem;
+    }
+  }
+
+  :host ::ng-deep {
+    .search {
+      .p-inputtext {
+        width: 500px;
+        height: 35px;
+        background-color: #d5d6d8ef;
+        border: 1px solid #d5d6d8;
+        @media screen and (max-width: 768px) {
+          max-width: 300px;
+        }
+      }
+    }
+    .pi-shopping-bag .p-badge {
+      background-color: #3498db;
+      font-size: 0.7rem;
+    }
+
+    .pi-shopping-bag .p-badge {
+      background-color: green;
+      font-size: 0.7rem;
+    }
+
+    .pi-heart .p-badge {
+      background-color: red;
+      font-size: 0.7rem;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  ul {
+    display: block;
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+  }
+
+  .navbar {
+    justify-content: start;
+    align-items: center;
+    text-align: start;
+    background-color: transparent;
+    cursor: pointer;
+    color: #fff;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+
+  .dropdown-container {
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+
+    .button {
+      background-color: transparent;
+      color: #333;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+
+      .item-icon {
+        margin-right: 8px;
+      }
+
+      .item-txt {
+        font-size: 1.2rem;
+      }
+
+      i.pi {
+        font-size: 1rem;
+      }
+
+      i.pi-chevron-down,
+      i.pi-chevron-up {
+        font-size: 1rem;
+        color: #333333cb;
+      }
+    }
+
+    .dropdown-content {
+      position: absolute;
+      background-color: #f9f9f9;
+      padding: 5px;
+      top: 100%;
+      right: -30px;
+      width: 180px;
+      border-radius: 8px;
+      z-index: 2;
+
+      ul.dropdown-menu {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        .menu-item {
+          padding: 5px;
+          display: flex;
+          font-size: 1.2rem;
+
+          a {
+            display: flex;
+            align-items: center;
+            color: #333;
+            text-decoration: none;
+
+            i.pi {
+              display: flex;
+              margin-right: 15px;
+              font-size: 1rem;
+            }
+          }
+
+          &:hover {
+            background-color: #ddd;
+          }
+        }
+      }
+    }
+  }
+
+  .navbar a {
+    color: #fff;
+  }
+
+  .navbar {
+    .title {
+      letter-spacing: 0;
+      font-weight: bold;
+      font-size: 2rem;
+    }
+    .custom-select {
+      color: #000;
+      border: none;
+      background: transparent;
+      font-size: 1.2rem;
+    }
+    .right-menu {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+
+      i {
+        color: #333;
+        font-size: 1.2rem;
+      }
+
+      li {
+        margin-right: 15px;
+      }
+    }
+  }
+
+  .search {
+    margin-bottom: 1rem;
+    width: 50%;
+    display: none;
+
+    .pi-search {
+      color: #555;
+      font-size: 1rem;
+    }
+  }
+
+  :host ::ng-deep {
+    .search {
+      .p-inputtext {
+        width: 500px;
+        height: 35px;
+        background-color: #d5d6d8ef;
+        border: 1px solid #d5d6d8;
+        @media screen and (max-width: 768px) {
+          max-width: 300px;
+        }
+      }
+    }
+    .pi-shopping-bag .p-badge {
+      background-color: #3498db;
+      font-size: 0.7rem;
+    }
+
+    .pi-shopping-bag .p-badge {
+      background-color: green;
+      font-size: 0.7rem;
+    }
+
+    .pi-heart .p-badge {
+      background-color: red;
+      font-size: 0.7rem;
+    }
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 767px) {
+  ul {
+    display: block;
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+  }
+
+  .navbar {
+    justify-content: start;
+    align-items: center;
+    text-align: start;
+    background-color: transparent;
+    cursor: pointer;
+    color: #fff;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+
+  .dropdown-container {
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+
+    .button {
+      background-color: transparent;
+      color: #333;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+
+      .item-icon {
+        margin-right: 8px;
+      }
+
+      .item-txt {
+        font-size: 1.2rem;
+      }
+
+      i.pi {
+        font-size: 1rem;
+      }
+
+      i.pi-chevron-down,
+      i.pi-chevron-up {
+        font-size: 1rem;
+        color: #333333cb;
+      }
+    }
+
+    .dropdown-content {
+      position: absolute;
+      background-color: #f9f9f9;
+      padding: 5px;
+      top: 100%;
+      right: -30px;
+      width: 180px;
+      border-radius: 8px;
+      z-index: 2;
+
+      ul.dropdown-menu {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        .menu-item {
+          padding: 5px;
+          display: flex;
+          font-size: 1.2rem;
+
+          a {
+            display: flex;
+            align-items: center;
+            color: #333;
+            text-decoration: none;
+
+            i.pi {
+              display: flex;
+              margin-right: 15px;
+              font-size: 1rem;
+            }
+          }
+
+          &:hover {
+            background-color: #ddd;
+          }
+        }
+      }
+    }
+  }
+
+  .navbar a {
+    color: #fff;
+  }
+
+  .navbar {
+    .title {
+      letter-spacing: 0;
+      font-weight: bold;
+      font-size: 2rem;
+    }
+    .custom-select {
+      color: #000;
+      border: none;
+      background: transparent;
+      font-size: 1.2rem;
+    }
+    .right-menu {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+
+      i {
+        color: #333;
+        font-size: 1.2rem;
+      }
+
+      li {
+        margin-right: 15px;
+      }
+    }
+  }
+
+  .search {
+    margin-bottom: 1rem;
+    width: 100%;
+    display: none;
+
+    .pi-search {
+      color: #555;
+      font-size: 1rem;
+    }
+  }
+
+  :host ::ng-deep {
+    .search {
+      .p-inputtext {
+        width: 500px;
+        height: 35px;
+        background-color: #d5d6d8ef;
+        border: 1px solid #d5d6d8;
+        @media screen and (max-width: 768px) {
+          max-width: 300px;
+        }
+      }
+    }
+    .pi-shopping-bag .p-badge {
+      background-color: #3498db;
+      font-size: 0.7rem;
+    }
+
+    .pi-shopping-bag .p-badge {
+      background-color: green;
+      font-size: 0.7rem;
+    }
+
+    .pi-heart .p-badge {
+      background-color: red;
+      font-size: 0.7rem;
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  ul {
+    display: block;
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+  }
+
+  .navbar {
+    justify-content: start;
+    align-items: center;
+    text-align: start;
+    background-color: transparent;
+    cursor: pointer;
+    color: #fff;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .dropdown-container {
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+
+    .button {
+      background-color: transparent;
+      color: #333;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+
+      .item-icon {
+        margin-right: 8px;
+      }
+
+      .item-txt {
+        font-size: 0.9rem;
+      }
+
+      i.pi {
+        font-size: 0.9rem;
+      }
+
+      i.pi-chevron-down,
+      i.pi-chevron-up {
+        font-size: 0.9rem;
+        color: #333333cb;
+      }
+    }
+
+    .dropdown-content {
+      position: absolute;
+      background-color: #f9f9f9;
+      padding: 5px;
+      top: 100%;
+      right: -30px;
+      width: 180px;
+      border-radius: 8px;
+      z-index: 2;
+
+      ul.dropdown-menu {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        .menu-item {
+          padding: 5px;
+          display: flex;
+          font-size: 0.9rem;
+
+          a {
+            display: flex;
+            align-items: center;
+            color: #333;
+            text-decoration: none;
+
+            i.pi {
+              display: flex;
+              margin-right: 15px;
+              font-size: 0.9rem;
+            }
+          }
+
+          &:hover {
+            background-color: #ddd;
+          }
+        }
+      }
+    }
+  }
+
+  .navbar a {
+    color: #fff;
+  }
+
+  .navbar {
+    .title {
+      letter-spacing: 0;
+      font-weight: bold;
+      font-size: 2rem;
+      display: none;
+    }
+    .custom-select {
+      color: #000;
+      border: none;
+      background: transparent;
+      font-size: 0.9rem;
+    }
+    .right-menu {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+
+      i {
+        color: #333;
+        font-size: 0.9rem;
+      }
+
+      li {
+        margin-right: 15px;
+      }
+    }
+  }
+
+  .search {
+    margin-bottom: 1rem;
+    width: 100%;
+    display: none;
+
+    .pi-search {
+      color: #555;
+      font-size: 1rem;
+    }
+  }
+
+  :host ::ng-deep {
+    .search {
+      .p-inputtext {
+        width: 500px;
+        height: 35px;
+        background-color: #d5d6d8ef;
+        border: 1px solid #d5d6d8;
+        @media screen and (max-width: 768px) {
+          max-width: 300px;
+        }
+      }
+    }
+    .pi-shopping-bag .p-badge {
+      background-color: #3498db;
+      font-size: 0.7rem;
+    }
+
+    .pi-shopping-bag .p-badge {
+      background-color: green;
+      font-size: 0.7rem;
+    }
+
+    .pi-heart .p-badge {
+      background-color: red;
+      font-size: 0.7rem;
     }
   }
 }
