--- a/src/app/pages/components/product/card-detail/card-detail.component.scss
+++ b/src/app/pages/components/product/card-detail/card-detail.component.scss
@@ -5,59 +5,291 @@ $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
 
-
-.image{
-  max-width: 500px;
-  max-height: 400px;
-}
-:host ::ng-deep{
-
-  .p-tabview{
-    max-width:100%;
+@media screen and (min-width: 1024px) {
+  .row{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-content:space-evenly;
   }
 
-  p-inputnumber , .p-inputnumber{
-    max-width: 100%;
+  .image {
+    max-width: 500px;
+    max-height: 400px;
   }
-  .p-icon{
-    color: RGB(255,170,74);
-    max-width: 100%;
-  }
-  .valueInput{
-    width:100%;
-     input{
+  :host ::ng-deep {
+    .p-tabview {
+      max-width: 100%;
+    }
+
+    p-inputnumber,
+    .p-inputnumber {
+      max-width: 100%;
+    }
+    .p-icon {
+      color: RGB(255, 170, 74);
+      max-width: 100%;
+    }
+    .valueInput {
       width: 100%;
-      font-size: 1rem;
-      border:1px solid $dark-text;
-      background-color: transparent;
-      color: $dark-text;
-      transition: border-color 0.3s;
+      input {
+        width: 100%;
+        font-size: 1rem;
+        border: 1px solid $dark-text;
+        background-color: transparent;
+        color: $dark-text;
+        transition: border-color 0.3s;
 
-      &:focus {
-        outline: none;
-        border-bottom: 1px solid $dark-text;
+        &:focus {
+          outline: none;
+          border-bottom: 1px solid $dark-text;
+        }
       }
-     }
 
-     .p-button{
+      .p-button {
+        background-color: $dark-text;
+        border: none;
+        width: 100%;
+      }
+    }
+
+    .out-button {
+      max-width: 100%;
+      width: 60%;
+      margin-right: 5px;
+    }
+
+    .add-to-cart {
       background-color: $dark-text;
-      border:none;
+      border: none;
       width: 100%;
-     }
-  }
-
-  .out-button{
-    max-width:100%;
-    width: 60%;
-    margin-right: 5px;
-  }
-
-  .add-to-cart{
-    background-color:$dark-text ;
-    border: none;
-    width: 100%;
-    height: 45px;
-    font-size: 1.1rem;
-    justify-content: center;
+      height: 45px;
+      font-size: 1.1rem;
+      justify-content: center;
+    }
   }
 }
+
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .container{
+    width: 100%;
+  }
+
+  .row{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .image {
+    max-width: 50%;
+  }
+
+  .col-12 {
+    flex: 0 0 auto;
+    padding: 1rem;
+    width:60%;
+  }
+  :host ::ng-deep {
+    .p-tabview {
+      max-width: 100%;
+    }
+
+    p-inputnumber,
+    .p-inputnumber {
+      max-width: 100%;
+    }
+    .p-icon {
+      color: RGB(255, 170, 74);
+      max-width: 100%;
+    }
+    .valueInput {
+      width: 100%;
+      input {
+        width: 100%;
+        font-size: 1rem;
+        border: 1px solid $dark-text;
+        background-color: transparent;
+        color: $dark-text;
+        transition: border-color 0.3s;
+
+        &:focus {
+          outline: none;
+          border-bottom: 1px solid $dark-text;
+        }
+      }
+
+      .p-button {
+        background-color: $dark-text;
+        border: none;
+        width: 5rem;
+      }
+    }
+
+    .out-button {
+      max-width: 100%;
+      width: 60%;
+      margin-right: 5px;
+    }
+
+    .add-to-cart {
+      background-color: $dark-text;
+      border: none;
+      width: 100%;
+      height: 45px;
+      font-size: 1.1rem;
+      justify-content: center;
+    }
+  }
+}
+
+
+@media screen and (min-width: 346px) and (max-width: 767px) {
+
+  .container{
+    width: 100%;
+  }
+
+  .row{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+  .image {
+    max-width: 100%;
+  }
+
+  .col-12 {
+    flex: 0 0 auto;
+    padding: 1rem;
+    width:60%;
+  }
+  :host ::ng-deep {
+    .p-tabview {
+      max-width: 100%;
+    }
+
+    p-inputnumber,
+    .p-inputnumber {
+      max-width: 100%;
+    }
+    .p-icon {
+      color: RGB(255, 170, 74);
+      max-width: 100%;
+    }
+    .valueInput {
+      width: 100%;
+      input {
+        width: 100%;
+        font-size: 0.9rem;
+        border: 1px solid $dark-text;
+        background-color: transparent;
+        color: $dark-text;
+        transition: border-color 0.3s;
+
+        &:focus {
+          outline: none;
+          border-bottom: 1px solid $dark-text;
+        }
+      }
+
+      .p-button {
+        background-color: $dark-text;
+        border: none;
+      }
+    }
+
+    .out-button {
+      max-width: 100%;
+      width: 100%;
+      margin-right: 5px;
+    }
+
+    .add-to-cart {
+      background-color: $dark-text;
+      border: none;
+      width: 100%;
+      height: 30px;
+      font-size: 0.9rem;
+      justify-content: center;
+    }
+  }
+}
+
+@media screen and (max-width: 345px) {
+
+  .container{
+    width: 370px;
+  }
+
+  .row{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-content:space-evenly;
+  }
+
+  .image {
+    max-width: 100%;
+  }
+
+  .col-12 {
+    flex: 0 0 auto;
+    padding: 1rem;
+    width:100%;
+  }
+  :host ::ng-deep {
+    .p-tabview {
+      max-width: 100%;
+    }
+
+    p-inputnumber,
+    .p-inputnumber {
+      max-width: 100%;
+    }
+    .p-icon {
+      color: RGB(255, 170, 74);
+      max-width: 100%;
+    }
+    .valueInput {
+      width: 100%;
+      input {
+        width: 100%;
+        font-size: 0.9rem;
+        border: 1px solid $dark-text;
+        background-color: transparent;
+        color: $dark-text;
+        transition: border-color 0.3s;
+
+        &:focus {
+          outline: none;
+          border-bottom: 1px solid $dark-text;
+        }
+      }
+
+      .p-button {
+        background-color: $dark-text;
+        border: none;
+      }
+    }
+
+    .out-button {
+      max-width: 100%;
+      width: 40%;
+      margin-right: 5px;
+    }
+
+    .add-to-cart {
+      background-color: $dark-text;
+      border: none;
+      width: 100%;
+      height: 40px;
+      font-size: 0.9rem;
+      justify-content: center;
+    }
+  }
+}
+
