--- a/src/app/home/reset-password/reset-password.component.scss
+++ b/src/app/home/reset-password/reset-password.component.scss
@@ -19,7 +19,7 @@ $module-color:#253741;
   form {
     width: 100%;
     max-width: 600px;
-    background-color: #fff;
+    background-color: $background-color;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
