--- a/src/app/pages/components/carts/content-carts/content-carts.component.scss
+++ b/src/app/pages/components/carts/content-carts/content-carts.component.scss
@@ -5,6 +5,28 @@ $dark-text: #34495e;
 $light-text: #ecf0f1;
 $light-text-hover: #91c9d7;
 $background-color: #ecf0f1;
+
+.content{
+  display: flex;
+  flex-direction: row;
+}
+
+.piece-price{
+  align-items: flex-end;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.p-inputNumber{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+
+}
+
 :host ::ng-deep{
   .complete{
 
@@ -47,3 +69,82 @@ $background-color: #ecf0f1;
 
 
 }
+
+
+@media screen and (max-width: 375px) {
+
+
+  .list-none{
+    .flex{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .content{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      align-content: center;
+    }
+  }
+
+  .piece-price{
+    align-items: flex-start;
+    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .p-inputNumber{
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    justify-content: flex-start;
+
+  }
+
+
+
+  :host ::ng-deep{
+    .complete{
+
+      .spancomplete{
+        width: 200px;
+      }
+
+      button{
+        width: 100%;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        background-color: $dark-text;
+        border: none;
+        margin-right: 10px;
+        font-weight: 500;
+
+      }
+    }
+    .p-button{
+      background-color: $dark-text;
+      border: none;
+      font-size:14px;
+      font-weight: 500;
+      width: 100%;
+      justify-content: center;
+    }
+    .inputNumber{
+      input{
+        width: 250px;
+        border:1px solid $dark-text;
+      }
+      .p-button{
+        background-color: $dark-text;
+        border: none;
+        width: 40px;
+        font-size:8px;
+        font-weight: 300;
+      }
+    }
+  }
+}
+
