--- a/src/app/pages/components/favorites/ex-favorites/ex-favorites.component.scss
+++ b/src/app/pages/components/favorites/ex-favorites/ex-favorites.component.scss
@@ -15,7 +15,7 @@
 }
 
 .surface-section .p-4 {
-  padding: 1rem; /* p-4 */
+  padding: 1rem;
 }
 
 .surface-section .shadow-1 {
@@ -54,3 +54,5 @@
   cursor: pointer;
   margin-left: 0.75rem;
 }
+
+
