--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -6,14 +6,14 @@
   </div>
   <hr>
   <div class="surface-card grid grid-nogutter border-round shadow-2 mb-6" *ngFor="let order of orders">
-    <div class="col-12 flex p-2 surface-100 justify-content-between border-round-top">
+    <div class="header-order col-12 flex p-2  justify-content-between border-round-top ">
       <div class="p-2 flex flex-row text-center align-items-center md:text-left">
-        <span class="text-700 mr-1">{{'contentOrdersForm.orderId' |  transloco}}: </span>
-        <span class="text-700 ">{{ order?.id }}</span>
+        <span class="text-700 text-white mr-1">{{'contentOrdersForm.orderId' |  transloco}}: </span>
+        <span class="text-700 font-bold text-white ">{{ order?.id | uppercase }}</span>
       </div>
        <div class="p-2 flex flex-row text-center align-items-center md:text-left">
-        <span class="text-700 mr-1">{{'contentOrdersForm.totalAmount' |  transloco}}:</span>
-        <span class="text-700 "> $ {{ order?.totalAmount }}</span>
+        <span class="text-700 text-white mr-1">{{'contentOrdersForm.totalAmount' |  transloco}}:</span>
+        <span class="text-700 font-bold text-white "> $ {{ order?.totalAmount }}</span>
       </div>
     </div>
     <div class="col-12">
