--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="card flex flex-row">
-    <div class="category-filter flex">
+<div class="card ">
+    <div class="category-filter">
       <div class="title">
         <h3>{{ "cardForm.title" | transloco }}</h3>
       </div>
