--- a/src/app/pages/components/carts/content-carts/content-carts.component.scss
+++ b/src/app/pages/components/carts/content-carts/content-carts.component.scss
@@ -11,6 +11,17 @@ $background-color: #ecf0f1;
   flex-direction: row;
 }
 
+
+.image{
+
+  img{
+    width: 200px;
+    height: 180px;
+    margin: 10px;
+  }
+}
+
+
 .piece-price{
   align-items: flex-end;
   justify-content: flex-end;
