--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -35,6 +35,13 @@
       <ul
         class="right-menu flex flex-row align-items-center justify-content-around"
       >
+      <li>
+       <div class="flex flex-row align-items-center">
+      <a [routerLink]="['/pages', 'creoter-form']">
+        {{ "navigationForm.seller" | transloco  | uppercase}}
+      </a>
+       </div>
+      </li>
         <li>
           <i
             class="pi pi-shopping-cart"
