--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -1,24 +1,33 @@
-<div class="card ">
-    <div class="category-filter">
-      <div class="title">
-        <h3>{{ "cardForm.title" | transloco }}</h3>
-      </div>
-      <div (click)="getAllProducts()">
-        {{ "cardForm.allProducts" | transloco }}
-      </div>
-      <div (click)="getProductByFilter('Accessories')">
-        {{ "cardForm.Accessories" | transloco }}
-      </div>
-      <div (click)="getProductByFilter('Electronics')">
-        {{ "cardForm.Electronics" | transloco }}
-      </div>
-      <div (click)="getProductByFilter('Clothing')">
-        {{ "cardForm.Clothing" | transloco }}
-      </div>
-      <div (click)="getProductByFilter('Fitness')">
-        {{ "cardForm.Fitness" | transloco }}
-      </div>
+<div class="card">
+  <p-dialog
+    header="Orion Innovation "
+    [(visible)]="visible"
+    [breakpoints]="{ '960px': '75vw' }"
+    styleClass="visible"
+  >
+    <app-creoter-form></app-creoter-form>
+  </p-dialog>
+
+  <div class="category-filter">
+    <div class="title">
+      <h3>{{ "cardForm.title" | transloco }}</h3>
     </div>
+    <div (click)="getAllProducts()">
+      {{ "cardForm.allProducts" | transloco }}
+    </div>
+    <div (click)="getProductByFilter('Accessories')">
+      {{ "cardForm.Accessories" | transloco }}
+    </div>
+    <div (click)="getProductByFilter('Electronics')">
+      {{ "cardForm.Electronics" | transloco }}
+    </div>
+    <div (click)="getProductByFilter('Clothing')">
+      {{ "cardForm.Clothing" | transloco }}
+    </div>
+    <div (click)="getProductByFilter('Fitness')">
+      {{ "cardForm.Fitness" | transloco }}
+    </div>
+  </div>
   <div class="flex flex-column w-full">
     <p-dataView
       [value]="filterProducts()"
@@ -36,7 +45,10 @@
         <div class="flex flex-row">
           <div class="product-container">
             <div class="product-card">
-              <div class="product-image" [routerLink]="['/pages/product', product.id]">
+              <div
+                class="product-image"
+                [routerLink]="['/pages/product', product.id]"
+              >
                 <img [src]="getFileUrl(product.file)" alt="Product Image" />
               </div>
               <div class="product-info">
@@ -74,12 +86,12 @@
                   [ngClass]="{ 'no-hover': isOutOfStock(product) }"
                   [disabled]="isOutOfStock(product)"
                 >
-                  {{'cardForm.notStock' | transloco}}
+                  {{ "cardForm.notStock" | transloco }}
                 </button>
                 <button
                   class="add-to-cart"
                   *ngIf="!isOutOfStock(product)"
-                  (click)="addToCart(product , product.id)"
+                  (click)="addToCart(product, product.id)"
                 >
                   {{ "cardForm.buttonLabel" | transloco }}
                 </button>
