--- a/src/app/pages/components/footer/footer.component.scss
+++ b/src/app/pages/components/footer/footer.component.scss
@@ -35,7 +35,7 @@ ul{
   background-color: #3498db;
   height: 2px;
   box-sizing: border-box;
-  width: 50px;
+  width: 40px;
 }
 .footer-col ul li:not(:last-child){
   margin-bottom: 10px;
@@ -57,10 +57,10 @@ ul{
 .footer-col .social-links a{
   display: flex;
   flex-direction: column;
-  height: 40px;
-  width: 40px;
+  height: 35px;
+  width: 35px;
   background-color: #3498db;
-  margin:10px 8px 0 10px;
+  margin:8px;
   text-align: center;
   align-items: center;
   justify-content: center;
