--- a/src/app/pages/components/footer/footer.component.html
+++ b/src/app/pages/components/footer/footer.component.html
@@ -3,11 +3,11 @@
     <div class="row">
       <div class="footer-col">
         <h4>{{"footer.contact" | transloco}}</h4>
-        <ul>
-          <li><a href="#">+901234567890</a></li>
-          <li><a href="#">İstanbul</a></li>
-          <li><a href="#">info@gmail.com</a></li>
-          <li>
+        <div>
+          <div><a href="#">+901234567890</a></div>
+          <div><a href="#">İstanbul</a></div>
+          <div><a href="#">info@gmail.com</a></div>
+          <div>
             <div class="flex flex-row align-items-center">
               <a [routerLink]="['/pages', 'about']">
                 <i class="pi pi-question-circle mr-2" style="color: #bbb;"></i>
@@ -15,16 +15,16 @@
                 "navigationForm.about" | transloco
               }}</a>
             </div>
-          </li>
-          <li>
+          </div>
+          <div>
             <div class="flex flex-row align-content-center">
               <a [routerLink]="['/pages', 'support']">
                 <i class="pi pi-question mr-2" style="color: #bbb;"></i
                 >{{ "navigationForm.help&support" | transloco }}</a
               >
             </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
       <div class="footer-col">
         <h4>{{"footer.follow" | transloco}}</h4>
