--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar align-items-center justify-content-evenly">
   <ul class="menu flex flex-row justify-content-between">
     <li>
-      <div class="flex flex-row align-content-center">
+      <div class="flex flex-row align-content-center align-items-center">
         <div>
           <img
             src="assets/images/OI_logo.png"
@@ -11,9 +11,9 @@
           />
         </div>
         <div>
-          <h1 class="title" [routerLink]="['/pages', 'product']">
+          <div class="title" [routerLink]="['/pages', 'product']">
             Orion Shop
-          </h1>
+          </div>
         </div>
       </div>
     </li>
