--- a/src/app/pages/components/product/card/card.component.scss
+++ b/src/app/pages/components/product/card/card.component.scss
@@ -224,6 +224,91 @@ $background-color: #ecf0f1;
     justify-content: center;
   }
 
+  .product-card {
+    width: 300px;
+    margin: 1px;
+    padding: 16px;
+    max-height: 350px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px $dark-text;
+    border-radius: 8px;
+    cursor: pointer;
+
+    .product-image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 150px;
+      img {
+        max-width: 100%;
+        max-height: 150px;
+        object-fit: cover;
+        border-radius: 8px;
+      }
+    }
+
+    .product-info {
+      margin-top: 16px;
+
+      .product-title {
+        font-size: 1rem;
+        margin-bottom: 8px;
+      }
+
+      .product-description {
+        margin-bottom: 16px;
+        font-size: 0.8rem;
+      }
+
+      .product-price {
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 16px;
+      }
+      .add-to-cart[disabled] {
+        background-color: transparent;
+        color: #555;
+        font-weight: 600;
+
+        &:hover {
+          background-color:transparent;
+        }
+      }
+      .add-to-cart {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        background-color:$dark-text;;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease-in-out;
+
+        &:hover {
+          background-color: #3b3d3f;
+        }
+      }
+      .more-cart {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 16px;
+        background-color: $dark-text;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease-in-out;
+
+        &:hover {
+          background-color: #3b3d3f;
+        }
+      }
+    }
+  }
+
   .search {
     width: 100%;
     top: 0;
