--- a/src/app/pages/components/carts/content-carts/content-carts.component.scss
+++ b/src/app/pages/components/carts/content-carts/content-carts.component.scss
@@ -81,7 +81,93 @@ $background-color: #ecf0f1;
 
 }
 
+@media screen and (min-width: 376px) and (max-width: 768px) {
 
+
+  .list-none{
+    .flex{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .content{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      align-content: flex-start;
+    }
+  }
+
+.image{
+display: flex;
+  img{
+    width: 200px;
+    height: 180px;
+    margin: 10px;
+  }
+}
+
+
+  .piece-price{
+    align-items: flex-start;
+    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .p-inputNumber{
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    justify-content: flex-start;
+  }
+
+
+
+  :host ::ng-deep{
+    .complete{
+
+      .spancomplete{
+        width: 200px;
+      }
+
+      button{
+        width: 100%;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        background-color: $dark-text;
+        border: none;
+        margin-right: 10px;
+        font-weight: 500;
+
+      }
+    }
+    .p-button{
+      background-color: $dark-text;
+      border: none;
+      font-size:14px;
+      font-weight: 500;
+      width: 100%;
+      justify-content: center;
+    }
+    .inputNumber{
+      width: 100%;
+      input{
+        width: auto;
+        border:1px solid $dark-text;
+      }
+      .p-button{
+        background-color: $dark-text;
+        border: none;
+        width: 40px;
+        font-size:8px;
+        font-weight: 300;
+      }
+    }
+  }
+}
 @media screen and (max-width: 375px) {
 
 
@@ -145,7 +231,7 @@ $background-color: #ecf0f1;
     }
     .inputNumber{
       input{
-        width: 250px;
+        width: auto;
         border:1px solid $dark-text;
       }
       .p-button{
